<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/championsleague"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/championleague"
            android:src="@drawable/championsleague"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/europeleague"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/europeleague"
            android:src="@drawable/europeleague"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ImageView
            android:id="@+id/intercontinal"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/intercontinental"
            android:src="@drawable/intercontinal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <ImageView
            android:id="@+id/italianchampion"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/italianchampion"
            android:src="@drawable/italianchampion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/italiancup"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/italiancup"
            android:src="@drawable/italiancup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/italianseriesb"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/italianseriesb"
            android:src="@drawable/italianseriesb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <ImageView
            android:id="@+id/italiansupercup"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/italiansupercup"
            android:src="@drawable/italiansupercup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/uefacup"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/uefacup"
            android:src="@drawable/uefacup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <ImageView
            android:id="@+id/uefasupercup"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/uefasupercup"
            android:src="@drawable/uefasupercup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <ImageView
            android:id="@+id/cupwinners"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/cupwinners"
            android:src="@drawable/cupwinners"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:text="1x Champions League Winner"
            app:layout_constraintBottom_toTopOf="@+id/championsleague"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="34x Italian Champion"
            app:layout_constraintBottom_toTopOf="@+id/italianchampion"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:text="13x Italian Cup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uefasupercup" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="8x Italian Super Cup winner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cupwinners" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:text="3x UEFA Cup Winner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/italianseriesb" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="1x Italian Serie B champion "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/italiancup" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="2x Intercontinental Cup Winner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/europeleague" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="2x UEFA Supercup Winner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/italianchampion" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="1x Cup Winners Cup Winner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intercontinal" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:text="1x European Champion Clubs' Cup "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/championsleague" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
